--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,18 +9,27 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="<%=root_path %>" >Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="<%= categories_path %>">Category</a>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= categories_path %>">Category</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= new_category_path %>">New Category</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= orders_path %>">Order Show</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= new_order_path %>">New Order</a>
+          </li>
+          <li class="nav-item">
+          <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
         </li>
+        <% else %>
         <li class="nav-item">
-          <a class="nav-link" href="<%= new_category_path %>">New Category</a>
+        <a class="nav-link" href="/users/sign_in">Sign in </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="<%= orders_path %>">Order Show</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="<%= new_order_path %>">New Order</a>
-        </li>
+        <% end %>
       </ul>
     </div>
   </div>
