--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,17 @@
   </head>
 
   <body>
-  <p class="alert alert-success"><%= notice %></p>
-  <p class="alert alert-danger"><%= alert %></p>
+    <div class="container-fluid">
 
+      <% if flash.present? %>
+        <p class="alert alert-success"><%= notice %></p>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <%= render "layouts/navbar" %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <%= render "layouts/navbar" %>
 
-    <%= yield %>
+        <%= yield %>
+    </div>
   </body>
 </html>
