--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -3,7 +3,7 @@
 <% @categories.each do |category| %>
   <div class="card border-primary">
     <div class="card-header text-center">
-      <%= category.name %>
+      <th><%= category.name %></th>
     </div>
     <div class="card-body">
       <table class="table">
