--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,13 +1,10 @@
+<br>
 <%= form_with model: category do |form| %>
-  <div>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
+  <div class="input-group mb-3">
+    <%= form.text_field :name, :placeholder => "Category Name" %>
+    <%= form.submit :class => 'btn btn-outline-secondary' %>
     <% category.errors.full_messages_for(:name).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+      <%= message %>
+      <% end %>
   </div>
 <% end %>
