--- a/app/views/categories/_itemshow.html.erb
+++ b/app/views/categories/_itemshow.html.erb
@@ -1,30 +1,23 @@
-<table class="table caption-top">
-  <thead>
-    <tr>
-      <th scope="col">Items</th>
-      <th scope="col">Single</th>
-      <th scope="col">Double</th>
-      <th scope="col">Triple</th>
-      <th colspan="2">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @category.items.where.not(id: nil).each do |item| %>
+<div class="card" style="width: 18rem;">
+<% @category.items.where.not(id: nil).each do |item| %>
+  <%=image_tag item.image if item.image.attached? %>
+  <div class="card-body">
+    <h5 class="card-title"><%= item.name %></h5>
+  </div>
 
-      <tr>
-        <th><%= item.name %> </th>
-        <% item.portions.each do |_k, v| %>
-          <td scope="col"> <%= v %> </td>
-        <%end%>
-        <td> <%= link_to "Destroy item", [item.category, item], data: {
-                      turbo_method: :delete,
-                      turbo_confirm: "Are you sure?"
-                    } %>
-        </td>
-        <td scope="col">
-          <%= link_to "Edit", edit_category_item_path(@category) %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <% item.portions.each do |_k, v| %>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><%= v %></li>
+    </ul>
+  <%end%>
+
+  <div class="card-body">
+    <%= link_to "Destroy item", [@category, item], data: {
+                                turbo_method: :delete,
+                                turbo_confirm: "Are you sure?"
+                                } %>
+    <%= link_to "Edit", edit_category_item_path(@category, item) %>
+  </div>
+
+<% end %>
+</div>
