--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,14 @@
 <h1>Categories</h1>
-<ul>
-  <% @categories.each do |category| %>
-    <li>
-      <%= link_to category.name, category %>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to "New Category", new_category_path %>
+<br>
+<div class="card" style="width: 18rem;">
+  <div class="card-header" style="color: purple;">
+    <%= link_to "New Category", new_category_path, :class => 'list-group-item' %>
+  </div>
+  <ul class="list-group list-group-flush">
+    <% @categories.each do |category| %>
+      <li>
+        <%= link_to category.name, category, :class => 'list-group-item' %>
+      </li>
+    <% end %>
+  </ul>
+</div>
