--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,12 +22,12 @@
           <li class="nav-item">
             <a class="nav-link" href="<%= new_order_path %>">New Order</a>
           </li>
-          <li class="nav-item">
-          <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+          <li class="nav-link">
+          <%= button_to "Sign out",  destroy_user_session_path, method: :delete %>
         </li>
         <% else %>
         <li class="nav-item">
-        <a class="nav-link" href="/users/sign_in">Sign in </a>
+        <a class="btn btn-link" href="/users/sign_in">Sign in </a>
         </li>
         <% end %>
       </ul>
