--- a/app/views/orders/_order_item_fields.html.erb
+++ b/app/views/orders/_order_item_fields.html.erb
@@ -1,25 +1,29 @@
-<div class='nested-feilds'>
-  <div class="field">
-    <%= order_form.label :item %><br>
-    <%= order_form.collection_select(:item_id, Item.all, 'id', 'name') %>
+ <div class='nested-feilds'>
+  <div class="card" style="width: 18rem ">
+    <div class="card-body">
+      <div class="field">
+        <%= order_form.label :item, :class => "form-label" %><br>
+        <%= order_form.collection_select(:item_id, Item.all, 'id', 'name', {prompt: 'Select Item'}, { class: "form-select" }) %>
+      </div>
+      <div class="field">
+        <%= order_form.label :quantity, :class => "form-label" %><br>
+        <%= order_form.number_field :quantity, :class => "form-control" %>
+      </div>
+      <div class="field">
+        <%= order_form.label :Portions, :class => "form-label" %><br>
+        <%= order_form.radio_button :portion,"single", :class => "form-check-input" %>
+        <%= order_form.label :Single %><br>
+      </div>
+      <div class="field">
+        <%= order_form.radio_button :portion,"double", :class => "form-check-input" %>
+        <%= order_form.label :Double %><br>
+      </div>
+      <div class="field">
+        <%= order_form.radio_button :portion,"triple", :class => "form-check-input" %>
+        <%= order_form.label :Triple %><br>
+      </div>
+    </div>
+    <%#= order_form.label :destroy, as: :hidden %>
+    <%= link_to 'Remove Item', '#', class: 'remove_order_item' %>
   </div>
-  <div class="field">
-    <%= order_form.label :quantity %><br>
-    <%= order_form.number_field :quantity %>
-  </div>
-  <div class="field">
-    <%= order_form.label :Portions %><br>
-    <%= order_form.radio_button :portion,"single" %>
-    <%= order_form.label :Single %><br>
-  </div>
-  <div class="field">
-    <%= order_form.radio_button :portion,"double" %>
-    <%= order_form.label :Double %><br>
-  </div>
-  <div class="field">
-    <%= order_form.radio_button :portion,"triple" %>
-    <%= order_form.label :Triple %><br>
-  </div>
-  <%#= order_form.label :_destroy, as: :hidden %>
-  <%= link_to 'Remove Item', '#', class: 'remove_order_item' %>
-</div>
+ </div>
