--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,36 +1,52 @@
-<%= link_to "New Order", new_order_path %>
 <table class="table caption-top">
   <thead>
-    <tr>
-      <th scope="col">Orders</th>
-      <th scope="col">Download</th>
+  </thead>
+  <tbody>
+    <tr class='border'>
+      <th scope="col" class='border' style="text-align: center;">Montly Sale</th>
+      <th scope="col" class='border' style="text-align: center;">Yearly Sale</th>
     </tr>
+  </thead>
+  <tbody>
+    <tr class='border'>
+      <td class='border' style="text-align: center;"><%= @monthly_sale %></td>
+      <td class='border' style="text-align: center;"><%= @yearly_sale %></td>
+    </tr>
+  </tbody>
+</table>
+
+<table class="table caption-top">
+  <thead>
   </thead>
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= "Order => #{order.id}" %></td>
-        <td colspan="3"><%= link_to 'Download', order_path(order, format: :pdf) %></td>
-      </tr>
-      <tr>
         <table class="table caption-top">
           <thead>
-            <tr>
-              <th scope="col">Item</th>
-              <th scope="col">Quantity</th>
-              <th scope="col">Portion</th>
-              <th scope="col">Total Price</th>
+          <tr class='border'>
+          <th class='border' colspan="3"><%= "Order No. #{order.id}" %></th>
+          <th class='border'><%= link_to 'Download', order_path(order, format: :pdf), target: "_blank" %></th>
+        </tr>
+            <tr class='border'>
+              <th scope="col" class='border' style="width: 25%">Item</th>
+              <th scope="col" class='border'>Quantity</th>
+              <th scope="col" class='border'>Portion</th>
+              <th scope="col" class='border'>Total Price</th>
             </tr>
           </thead>
           <tbody>
             <% order.order_items.each do |order_item| %>
-              <tr>
-                <td><%= link_to order_item.item.name, order %></td>
-                <td><%= order_item.quantity %></td>
-                <td><%= order_item.portion %></td>
-                <td><%= order_item.total_price %></td>
+              <tr class='border'>
+                <td class='border'><%= link_to order_item.item.name, order %></td>
+                <td class='border'><%= order_item.quantity %></td>
+                <td class='border'><%= order_item.portion %></td>
+                <td class='border'><%= order_item.total_price %></td>
               </tr>
             <% end %>
+            <tr class='border'>
+            <th colspan='3' class='border'>Grand Total</th>
+            <td colspan='2' class='border'><%= order.grand_total %></td>
+            </tr>
           </tbody>
         </table>
       </tr>
