--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,31 +1,44 @@
 <table class="table caption-top">
   <thead>
-    <tr>
-      <th scope="col">Items</th>
-      <th scope="col">Items Name</th>
-      <th scope="col">Portion</th>
-      <th scope="col">Quantity</th>
-      <th scope="col">Total Price</th>
-      <th colspan="3">Actions</th>
+    <tr class='border'>
+      <th scope="col" colspan='6'>Items</th>
+      <th colspan="1">Actions</th>
     </tr>
   </thead>
   <tbody>
-      <tr>
-        <td><%= @order.id %> </td>
-        <td><%= @item.name %> </td>
-        <td><%= @order_item.portion %> </td>
-        <td><%= @order_item.quantity %></td>
-        <td><%= @order_item.total_price %></td>
+  <tr class='border'>
+        <th class='border'><%= @order.id %> </th>
+        <th scope="col" class='border'>Items Name</th>
+      <th scope="col" class='border'>Portion</th>
+      <th scope="col" class='border'>Quantity</th>
+      <th scope="col" class='border'>Item Price</th>
+      <th scope="col" class='border'>Total Price</th>
         <td scope="col">
-        <%= link_to "Edit", edit_order_path(@order) %>
-        </td>
-        <td scope="col">
+          <%= link_to "Edit", edit_order_path(@order) %>
+            |
           <%= link_to "Destroy", order_path(@order), data: {
             turbo_method: :delete,
             turbo_confirm: "Are you sure?"
           } %>
+          |
+          <%= link_to 'Download', order_path(@order, format: :pdf), target: "_blank" %>
         </td>
-        <td><%#= link_to "Download",  %></td>
       </tr>
+
+    <% @order.order_items.map do  |order_detail| %>
+      <tr class='border'>
+        <td><%= order_detail.id %></td>
+        <td class='border'><%= order_detail.item.name %></td>
+        <td class='border'><%= order_detail.portion %></td>
+        <td class='border'><%= order_detail.quantity %></td>
+        <td class='border'><%= order_detail.item.portions[order_detail.portion] %></td>
+        <td class='border' colspan='3' ><%= order_detail.total_price %></td>
+
+      </tr>
+    <% end %>
+    <tr>
+      <th colspan='5' class='border'>Grand Total</th>
+      <td colspan='2' class='border'><%= @order.grand_total %></td>
+    </tr>
   </tbody>
 </table>
