--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" href="<%= new_order_path %>">New Order</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= dashboard_path %>">Dashboard</a>
+          </li>
           <li class="nav-link">
           <%= button_to "Sign out",  destroy_user_session_path, method: :delete %>
         </li>
